fixed add task button on mobile

--- a/src/components/AddTask/addtask.scss
+++ b/src/components/AddTask/addtask.scss
@@ -23,6 +23,7 @@
     text-align: center;
     border-radius: var(--tl-spacing-xs);
     margin-top: var(--tl-spacing-l);
+    margin-bottom: var(--tl-spacing-s);
     padding: var(--tl-spacing-md) var(--tl-spacing-xl);
     .tl-add-task__text {
       color: var(--tl-neutral-white);
